--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smartly AI</title>
 
-  <!-- App Store Smart Banner (optional later) -->
-  <meta name="apple-itunes-app" content="app-id=YOUR_APP_ID">
-
   <link rel="stylesheet" href="styles.css" />
+  <script defer src="menu.js"></script>
 </head>
 <body>
+
+  <!-- TOP PURPLE SPACER -->
+  <div class="purple-spacer"></div>
 
   <!-- NAVBAR -->
   <header class="navbar">
     <img src="assets/logo-top.png" alt="Smartly AI Logo" class="logo" />
-    <div class="menu">☰</div>
+    <button class="menu-button" id="menuButton">☰</button>
+
+    <!-- DROPDOWN -->
+    <div class="dropdown" id="dropdown">
+      <a href="privacy.html">Privacy Policy</a>
+      <a href="terms.html">Terms of Use</a>
+      <a href="mailto:team.repmax@gmail.com">Contact</a>
+    </div>
   </header>
 
   <!-- HERO -->
@@ -44,16 +52,13 @@
   <footer class="footer">
     <img src="assets/logo-footer.png" alt="Smartly Logo" class="footer-logo" />
 
-    <div class="footer-links">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Use</a>
-      <a href="#">Contact</a>
-    </div>
-
     <p class="copyright">
       © Copyright 2026, all rights reserved
     </p>
   </footer>
+
+  <!-- BOTTOM PURPLE SPACER -->
+  <div class="purple-spacer"></div>
 
 </body>
 </html>
