--- a/index.html
+++ b/index.html
@@ -1,82 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Smartly AI – Scan, Learn, Solve</title>
-  <meta name="description" content="Smartly AI helps students scan homework, learn key concepts, and solve problems instantly." />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Smartly AI" />
-  <meta property="og:description" content="Scan homework. Learn concepts. Solve instantly." />
-  <meta property="og:image" content="https://yourdomain.app/assets/og-image.png" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="menu.js"></script>
-</head>
-
 <body class="purple-bg">
 
-  <!-- NAVBAR -->
-  <header class="navbar">
-    <a href="index.html">
-      <img src="assets/logo-top.png" class="logo" alt="Smartly AI" />
+<header class="navbar">
+  <a href="index.html">
+    <img src="assets/logo-top.png" class="logo" />
+  </a>
+
+  <button class="menu-button" id="menuButton">☰</button>
+
+  <div class="dropdown" id="dropdown">
+    <a href="privacy.html">Privacy Policy</a>
+    <a href="terms.html">Terms of Use</a>
+    <a href="mailto:team.repmax@gmail.com">Contact</a>
+  </div>
+</header>
+
+<main class="white-section fade-in">
+  <section class="hero">
+    <h1>Meet Smartly AI</h1>
+    <h2>Scan, learn, solve</h2>
+    <p>Take a picture, review key concepts, get an answer.</p>
+
+    <a href="#" class="app-store-button">
+      <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" />
     </a>
 
-    <button class="menu-button" id="menuButton">☰</button>
-
-    <div class="dropdown" id="dropdown">
-      <a href="privacy.html">Privacy Policy</a>
-      <a href="terms.html">Terms of Use</a>
-      <a href="mailto:team.repmax@gmail.com">Contact</a>
+    <div class="hero-image">
+      <img src="assets/app-mockups.png" />
     </div>
-  </header>
+  </section>
+</main>
 
-  <!-- PAGE CONTENT -->
-  <div class="page">
-    <main class="content fade-in">
+<footer class="footer">
+  <a href="index.html">
+    <img src="assets/logo-footer.png" class="footer-logo" />
+  </a>
 
-      <section class="hero">
-        <h1>Meet Smartly AI</h1>
-        <h2>Scan, learn, solve</h2>
-        <p>Take a picture, review key concepts, get an answer.</p>
-
-        <a href="#" class="app-store-button">
-          <img
-            src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
-            alt="Download on the App Store"
-          />
-        </a>
-
-        <div class="hero-image">
-          <img src="assets/app-mockups.png" alt="Smartly App Mockups" />
-        </div>
-      </section>
-
-    </main>
+  <div class="footer-links">
+    <a href="privacy.html">Privacy Policy</a>
+    <a href="terms.html">Terms of Use</a>
+    <a href="mailto:team.repmax@gmail.com">Contact</a>
   </div>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <a href="index.html">
-      <img src="assets/logo-footer.png" class="footer-logo" alt="Smartly AI" />
-    </a>
-
-    <div class="footer-links">
-      <a href="privacy.html">Privacy Policy</a>
-      <a href="terms.html">Terms of Use</a>
-      <a href="mailto:team.repmax@gmail.com">Contact</a>
-    </div>
-
-    <p class="copyright">
-      © 2026 Smartly AI. All rights reserved.
-    </p>
-  </footer>
+  <p class="copyright">
+    © 2026 Smartly AI. All rights reserved.
+  </p>
+</footer>
 
 </body>
-</html>
