--- a/privacy.html
+++ b/privacy.html
@@ -1,26 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy – Smartly AI</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+<body class="purple-bg">
 
-  <div class="purple-spacer"></div>
-
-  <header class="navbar">
+<header class="navbar">
+  <a href="index.html">
     <img src="assets/logo-top.png" class="logo" />
-  </header>
+  </a>
 
-  <main class="hero">
+  <button class="menu-button" id="menuButton">☰</button>
+
+  <div class="dropdown" id="dropdown">
+    <a href="privacy.html">Privacy Policy</a>
+    <a href="terms.html">Terms of Use</a>
+    <a href="mailto:team.repmax@gmail.com">Contact</a>
+  </div>
+</header>
+
+<main class="white-section fade-in">
+  <section class="hero">
     <h1>Privacy Policy</h1>
-    <p style="margin-top: 24px; max-width: 600px; margin-inline: auto;">
+    <p>
       This is a placeholder privacy policy for Smartly AI.
       Replace this content with your official policy before launch.
     </p>
-  </main>
+  </section>
+</main>
 
+<footer class="footer">
+  <a href="index.html">
+    <img src="assets/logo-footer.png" class="footer-logo" />
+  </a>
+</footer>
+
+<script src="menu.js"></script>
 </body>
-</html>
