Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<body class="purple-bg">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Smartly AI</title>
+
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="menu.js"></script>
+</head>
+
+<body>
 
 <header class="navbar">
   <a href="index.html">
@@ -14,19 +25,20 @@
   </div>
 </header>
 
-<main class="white-section fade-in">
+<main class="main">
   <section class="hero">
     <h1>Meet Smartly AI</h1>
     <h2>Scan, learn, solve</h2>
     <p>Take a picture, review key concepts, get an answer.</p>
 
-    <a href="#" class="app-store-button">
-      <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" />
+    <a href="#">
+      <img
+        class="appstore"
+        src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+      />
     </a>
 
-    <div class="hero-image">
-      <img src="assets/app-mockups.png" />
-    </div>
+    <img class="mockup" src="assets/app-mockups.png" />
   </section>
 </main>
 
@@ -40,10 +52,7 @@
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:team.repmax@gmail.com">Contact</a>
   </div>
-
-  <p class="copyright">
-    © 2026 Smartly AI. All rights reserved.
-  </p>
 </footer>
 
 </body>
+</html>
