--- a/terms.html
+++ b/terms.html
@@ -1,4 +1,15 @@
-<body class="purple-bg">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terms of Use – Smartly AI</title>
+
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="menu.js"></script>
+</head>
+
+<body>
 
 <header class="navbar">
   <a href="index.html">
@@ -14,12 +25,18 @@
   </div>
 </header>
 
-<main class="white-section fade-in">
+<main class="main">
   <section class="hero">
     <h1>Terms of Use</h1>
-    <p>
-      This is a placeholder terms of use page.
-      Replace this text with your official terms before launch.
+
+    <p style="margin-top: 24px; max-width: 600px;">
+      This is a placeholder Terms of Use page for Smartly AI.
+      Replace this content with your official terms before launch.
+    </p>
+
+    <p style="margin-top: 16px; max-width: 600px;">
+      This page should outline acceptable use, disclaimers,
+      limitations of liability, and user responsibilities.
     </p>
   </section>
 </main>
@@ -28,7 +45,13 @@
   <a href="index.html">
     <img src="assets/logo-footer.png" class="footer-logo" />
   </a>
+
+  <div class="footer-links">
+    <a href="privacy.html">Privacy Policy</a>
+    <a href="terms.html">Terms of Use</a>
+    <a href="mailto:team.repmax@gmail.com">Contact</a>
+  </div>
 </footer>
 
-<script src="menu.js"></script>
 </body>
+</html>
