Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="dropdown" id="dropdown">
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Use</a>
-    <a href="mailto:team.repmax@gmail.com">Contact</a>
+    <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
 </header>
 
@@ -50,7 +50,7 @@
   <div class="footer-links">
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Use</a>
-    <a href="mailto:team.repmax@gmail.com">Contact</a>
+    <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
 </footer>
 
