--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
+
+  <!-- Copyright notice -->
+  <p class="copyright">© 2026 Smartly AI</p>
 </footer>
+
 
 </body>
 </html>
