Add copyright notice to terms.html
Added copyright notice for 2026.

--- a/terms.html
+++ b/terms.html
@@ -51,6 +51,9 @@
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
+
+  <!-- Copyright notice -->
+  <p class="copyright">© 2026 Smartly AI</p>
 </footer>
 
 </body>
