--- a/terms.html
+++ b/terms.html
@@ -4,57 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terms of Use – Smartly AI</title>
-
   <link rel="stylesheet" href="styles.css" />
   <script defer src="menu.js"></script>
 </head>
-
 <body>
-
 <header class="navbar">
   <a href="index.html">
     <img src="assets/logo-top.png" class="logo" />
   </a>
-
   <button class="menu-button" id="menuButton">☰</button>
-
   <div class="dropdown" id="dropdown">
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
 </header>
-
 <main class="main">
   <section class="hero">
     <h1>Terms of Use</h1>
-
     <p style="margin-top: 24px; max-width: 600px;">
-      This is a placeholder Terms of Use page for Smartly AI.
-      Replace this content with your official terms before launch.
+      Smartly uses Apple's standard EULA:
     </p>
-
     <p style="margin-top: 16px; max-width: 600px;">
-      This page should outline acceptable use, disclaimers,
-      limitations of liability, and user responsibilities.
+      <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" target="_blank" rel="noopener noreferrer">
+        Apple's Licensed Application End User License Agreement
+      </a>
     </p>
   </section>
 </main>
-
 <footer class="footer">
   <a href="index.html">
     <img src="assets/logo-footer.png" class="footer-logo" />
   </a>
-
   <div class="footer-links">
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
-
   <!-- Copyright notice -->
   <p class="copyright">© 2026 Smartly AI</p>
 </footer>
-
 </body>
 </html>
