--- a/privacy.html
+++ b/privacy.html
@@ -4,58 +4,101 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy – Smartly AI</title>
-
   <link rel="stylesheet" href="styles.css" />
   <script defer src="menu.js"></script>
 </head>
-
 <body>
-
 <header class="navbar">
   <a href="index.html">
     <img src="assets/logo-top.png" class="logo" />
   </a>
-
   <button class="menu-button" id="menuButton">☰</button>
-
   <div class="dropdown" id="dropdown">
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
 </header>
-
 <main class="main">
   <section class="hero">
     <h1>Privacy Policy</h1>
+    <p style="margin-top: 8px; color: #888;">Effective Date: January 9, 2026</p>
 
-    <p style="margin-top: 24px; max-width: 600px;">
-      This is a placeholder Privacy Policy for Smartly AI.
-      Replace this text with your official privacy policy before launch.
-    </p>
+    <div style="margin-top: 32px; max-width: 700px; text-align: left; line-height: 1.7;">
 
-    <p style="margin-top: 16px; max-width: 600px;">
-      This page should describe what data is collected, how it is used,
-      and how users can contact you regarding privacy concerns.
-    </p>
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Introduction</h2>
+      <p>
+        Smartly AI ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard information when you use our homework assistance app. By using Smartly AI, you agree to the practices described in this policy.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Age Requirement</h2>
+      <p>
+        Smartly AI is intended for users aged 13 and older. We do not knowingly collect personal information from children under 13. If you are under 13, please do not use this app.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Information We Collect</h2>
+      <p>
+        <strong>Device Identifier:</strong> We collect and store a unique device identifier in our secure servers (Cloudflare) solely to prevent abuse and ensure fair usage of our service. This identifier is not linked to any personal information.
+      </p>
+      <p style="margin-top: 12px;">
+        <strong>User-Submitted Reports:</strong> If you choose to report an AI response for inaccuracy or other issues, the question you submitted may be uploaded to our servers for review. These reports do not contain personal identifiers beyond the content of the question itself.
+      </p>
+      <p style="margin-top: 12px;">
+        <strong>Local Data:</strong> Your questions, uploaded photos, and response history are stored locally on your device only. We do not upload or have access to this data unless you submit a report.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">How We Use Your Information</h2>
+      <p>
+        We use the device identifier to prevent abuse and ensure service availability for all users. Reported questions are used solely to improve the accuracy and quality of our AI responses.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Third-Party Services</h2>
+      <p>
+        Smartly AI uses the OpenAI API to process your questions and generate responses. When you submit a question, it is sent to OpenAI's servers for processing. Please review
+        <a href="https://openai.com/policies/privacy-policy" target="_blank" rel="noopener noreferrer">OpenAI's Privacy Policy</a>
+        to understand how they handle data.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Data Storage and Security</h2>
+      <p>
+        Device identifiers and reported questions are stored securely on Cloudflare's infrastructure. We implement reasonable security measures to protect this information from unauthorized access.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Analytics and Advertising</h2>
+      <p>
+        We do not use third-party analytics tools. We do not display advertisements in our app.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Your Choices</h2>
+      <p>
+        Since we collect minimal data that is not personally identifiable, we do not offer a data deletion process. Your local history can be cleared directly from your device at any time.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Changes to This Policy</h2>
+      <p>
+        We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated effective date. Continued use of the app after changes constitutes acceptance of the revised policy.
+      </p>
+
+      <h2 style="margin-top: 24px; margin-bottom: 12px;">Contact Us</h2>
+      <p>
+        If you have any questions or concerns about this Privacy Policy, please contact us at:
+        <a href="mailto:get.smartlyai@gmail.com">get.smartlyai@gmail.com</a>
+      </p>
+
+    </div>
   </section>
 </main>
-
 <footer class="footer">
   <a href="index.html">
     <img src="assets/logo-footer.png" class="footer-logo" />
   </a>
-
   <div class="footer-links">
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
-
   <!-- Copyright notice -->
   <p class="copyright">© 2026 Smartly AI</p>
 </footer>
-
-
 </body>
 </html>
