Update device identifier description in privacy.html
Removed mention of Cloudflare from device identifier description.

--- a/privacy.html
+++ b/privacy.html
@@ -38,7 +38,7 @@
 
       <h2 style="margin-top: 24px; margin-bottom: 12px;">Information We Collect</h2>
       <p>
-        <strong>Device Identifier:</strong> We collect and store a unique device identifier in our secure servers (Cloudflare) solely to prevent abuse and ensure fair usage of our service. This identifier is not linked to any personal information.
+        <strong>Device Identifier:</strong> We collect and store a unique device identifier in our secure servers solely to prevent abuse and ensure fair usage of our service. This identifier is not linked to any personal information.
       </p>
       <p style="margin-top: 12px;">
         <strong>User-Submitted Reports:</strong> If you choose to report an AI response for inaccuracy or other issues, the question you submitted may be uploaded to our servers for review. These reports do not contain personal identifiers beyond the content of the question itself.
