Revise third-party service descriptions in privacy.html
Updated references to third-party services and infrastructure in the privacy policy.

--- a/privacy.html
+++ b/privacy.html
@@ -54,14 +54,12 @@
 
       <h2 style="margin-top: 24px; margin-bottom: 12px;">Third-Party Services</h2>
       <p>
-        Smartly AI uses the OpenAI API to process your questions and generate responses. When you submit a question, it is sent to OpenAI's servers for processing. Please review
-        <a href="https://openai.com/policies/privacy-policy" target="_blank" rel="noopener noreferrer">OpenAI's Privacy Policy</a>
-        to understand how they handle data.
+        Smartly AI uses third-party API to process your questions and generate responses. When you submit a question, it is sent to third-party servers for processing. 
       </p>
 
       <h2 style="margin-top: 24px; margin-bottom: 12px;">Data Storage and Security</h2>
       <p>
-        Device identifiers and reported questions are stored securely on Cloudflare's infrastructure. We implement reasonable security measures to protect this information from unauthorized access.
+        Device identifiers and reported questions are stored securely on third-party infrastructure. We implement reasonable security measures to protect this information from unauthorized access.
       </p>
 
       <h2 style="margin-top: 24px; margin-bottom: 12px;">Analytics and Advertising</h2>
