Update App Store link in index.html

--- a/index.html
+++ b/index.html
@@ -4,62 +4,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smartly AI</title>
-
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Space+Grotesk:wght@500;600;700&display=swap" rel="stylesheet">
   <script defer src="menu.js"></script>
 </head>
-
 <body>
-
 <header class="navbar">
   <a href="index.html">
     <img src="assets/logo-top.png" class="logo" />
   </a>
-
   <button class="menu-button" id="menuButton">☰</button>
-
   <div class="dropdown" id="dropdown">
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
 </header>
-
 <main class="main">
   <section class="hero">
     <h1>Meet Smartly AI</h1>
     <h2>Scan, learn, solve</h2>
     <p>Take a picture, review key concepts, get an answer.</p>
-
-    <a href="#">
+    <a href="https://apps.apple.com/us/app/smartly-ai-homework-helper/id6757500397">
       <img
         class="appstore"
         src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
       />
     </a>
-
     <img class="mockup" src="assets/app-mockups.png" />
   </section>
 </main>
-
 <footer class="footer">
   <a href="index.html">
     <img src="assets/logo-footer.png" class="footer-logo" />
   </a>
-
   <div class="footer-links">
     <a href="privacy.html">Privacy Policy</a>
     <a href="terms.html">Terms of Use</a>
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
-
   <!-- Copyright notice -->
   <p class="copyright">© 2026 Smartly AI</p>
 </footer>
-
-
 </body>
 </html>
