Update copyright notice to Smartly Labs LLC

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <a href="mailto:get.smartlyai@gmail.com">Contact</a>
   </div>
   <!-- Copyright notice -->
-  <p class="copyright">© 2026 Smartly AI</p>
+  <p class="copyright">© 2026 Smartly Labs LLC</p>
 </footer>
 </body>
 </html>
